--- a/mainpage/templates/mainpage/recipe_recom.html
+++ b/mainpage/templates/mainpage/recipe_recom.html
@@ -10,43 +10,17 @@
     <title>Ingredients Recommendation Page</title>
 </head>
 <body>
-    <div style="height:100px;">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <div class="navbar_logo">
-                <a href="{% url 'mainpage:mainpage' %}">
-                    <img src="{% static 'logo.png' %}">
-                </a>
-            </div>
-            <ul class="navbar_menu">
-                <li><a href="{% url 'mypage:main' %}">마이페이지</a></li>
-                {% comment %} <li><a href=''>나눔 게시판</a></li> {% endcomment %}
-                <li><a href="{% url 'recipeboard:recipeboard_index' %}">레시피 게시판</a></li>
-                <li><a href="{% url 'communityboard:communityboard_index' %}">커뮤니티 게시판</a></li>
-            </ul>
-            <div class="navbar_right">
-                <div class="search">
-                    <input id='searchfield' type='text' max_length=255 autocomplete='off'>
-                    <button class='searchbtn' onclick="search_recipe(); return false;">검색</button>
-                </div>
-                <a href="{% url 'mainpage:mainpage' %}#slideShow" class="weather">
-                    <div class="temp"></div>
-                    <div class="icon"></div>
-                </a>
-            </div>
-            <a href='#' class="navbar_togglebtn">
-                <i class="fas fa-bars"></i>
-            </a>
-        </nav>
-    </div>
+    {% include "mainpage/header.html" %}
     <div>
         {{ data }}<br /> 
         storage : {{ data.storage }}<br /> 
-        {% include "mainpage/header.html" %}
 
-        {% for item in re_data %}
-        <h3>{{ item.title }} / {{ item.ingre }} </h3>
-        --------------------------------------------------------------------------------------------------
-    {% endfor %}  
+        <h3> 추천 레시피 </h3>  
+        {% for item in recommend_data %}
+            <h3>{{ item.title }} / {{ item.ingre }} </h3>
+           --------------------------------------------------------------------------------------------------
+        {% endfor %}   
+        
     </div>
     <div class="content-title">
         <h3>재료 추천 레시피</h3>
@@ -183,8 +157,7 @@
         </ul> {% endcomment %}
     </div>
         </ul>
-    </div> {% endcomment %}
-
+    </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="{% static 'main.js' %}"></script>
     <script>
