--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -28,8 +28,12 @@
             </ul>
             <div class="navbar_right">
                 <div class="search">
-                    <input id='searchfield' type='text' max_length=255 autocomplete='off'>
-                    <button class='searchbtn' onclick="search_recipe(); return false;">검색</button>
+                    <form action="{% url 'mainpage:search' %}" method="get">
+                        <input class="searchbox1" type="text" name="kw">
+                        <input class="searchbox2" type="submit" value="검색">
+                    </form>
+                    {% comment %} <input id='searchfield' type='text' max_length=255 autocomplete='off'>
+                    <button class='searchbtn' onclick="search_recipe(); return false;">검색</button> {% endcomment %}
                 </div>
                 <a href="{% url 'mainpage:mainpage' %}#slideShow" class="weather">
                     <div class="temp"></div>
@@ -247,12 +251,12 @@
             });
         });
 
-        /* 레시피 검색 */
+        /* 레시피 검색 
         function search_recipe() {
-            var food_cate = document.getElementById('searchfield').value;
-            if (food_cate.length == 0) { return false;}
-            location.href = "{% url 'mainpage:search' %}";
-        }
+            var kw = document.getElementById('searchfield').value;
+            if (kw.length == 0) { return false;}
+            location.href = "{% url 'mainpage:search' %}?kw={{kw|urlencode}}";
+        } */
 
         /* 재료 분석 후 레시피 추천 */ //분석 시작 버튼 (이동)
         function find_ingred() {
