--- a/mainpage/static/common.css
+++ b/mainpage/static/common.css
@@ -13,9 +13,10 @@ body {
     background-color: #EEB541;
 }
 .image {
-    width:100%;
-    height:100%;
-    overflow:hidden;
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+
 }
 img {
     border-top-left-radius: 20px;
@@ -24,7 +25,7 @@ img {
     height:100%;
 }
 .recipe-title {
-    font-size:30px;
+    font-size:22px;
     font-weight:bold;
     text-align: center;
 }
@@ -91,9 +92,6 @@ a {
     z-index: 1030;
 }
 
-.content-title {
-    padding-top: 100px;
-}
 
 .navbar {
     display:flex;
