--- a/mainpage/templates/mainpage/recipe_recom.html
+++ b/mainpage/templates/mainpage/recipe_recom.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href='{% static "common.css" %}?after'>
+    <link rel="stylesheet" type="text/css" href='{% static "common.css" %}'>
     <link rel="apple-touch-icon" href="/custom_icon.png"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,173 +11,32 @@
 </head>
 <body>
     {% include "mainpage/header.html" %}
-    <div>
+    {% comment %} <div>
         {{ data }}<br /> 
-        storage : {{ data.storage }}<br /> 
-
-        <h3> 추천 레시피 </h3>  
-        {% for item in recommend_data %}
-            <h3>{{ item.title }} / {{ item.ingre }} </h3>
-           --------------------------------------------------------------------------------------------------
-        {% endfor %}   
-        
-    </div>
-    <div class="content-title">
+        storage : {{ data.storage }}<br />         
+    </div> {% endcomment %}
+    <div>
         <h3>재료 추천 레시피</h3>
     </div>
-    {% comment %} <div>
-        <h3> {{data}} </h3>
-    <div> {% endcomment %}
-
     <div class="list">
-        {% comment %} {% for %} {% endcomment %}
+        {% for item in recommend_data %}
         <div class ="card">
             <div class ="image">
-            <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="" onclick="recipe_detail();">
+                <img src="{% get_static_prefix %}{{item.num}}.jpg" alt="" onclick="recipe_detail();">
             </div>
             <div class = "sblank"></div>
             <div class="recipe-title" onclick="recipe_detail();">
-                레시피 이름
+                {{item.title}}
             </div>
             <div class = "sblank"></div>
         </div>
         <div class="blank"></div>
-        {% comment %} {% endfor %} {% endcomment %}
-        <div class ="card">
-            <div class ="image">
-            <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="" onclick="recipe_detail();">
-            </div>
-            <div class = "sblank"></div>
-            <div class="recipe-title" onclick="recipe_detail();">
-                레시피 이름
-            </div>
-            <div class = "sblank"></div>
-        </div>
-        <div class="blank"></div>
-    </div>
-
-    {% comment %} <div class="recomm_list">
-        <ul class="recipe_list">
-            <li class="recipe">
-                <div class="recipe_img">
-                    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="" onclick="recipe_detail();">
-                </div>
-                <div class="recipe_title">
-                    이름
-                </div>
-            </li>
-            <li class="recipe">
-                <div class="recipe_img">
-                    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="">
-                </div>
-                <div class="recipe_title">
-                    이름
-                </div>
-            </li>
-            <li class="recipe">
-                <div class="recipe_img">
-                    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="">
-                </div>
-                <div class="recipe_title">
-                    이름
-                </div>
-            </li>
-            <li class="recipe">
-                <div class="recipe_img">
-                    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="">
-                </div>
-                <div class="recipe_title">
-                    이름
-                </div>
-            </li>
-            <li class="recipe">
-                <div class="recipe_img">
-                    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="">
-                </div>
-                <div class="recipe_title">
-                    이름
-                </div>
-            </li>
-            <li class="recipe">
-                <div class="recipe_img">
-                    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="">
-                </div>
-                <div class="recipe_title">
-                    이름
-                </div>
-            </li>
-            <li class="recipe">
-                <div class="recipe_img">
-                    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="">
-                </div>
-                <div class="recipe_title">
-                    이름
-                </div>
-            </li>
-            <li class="recipe">
-                <div class="recipe_img">
-                    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="">
-                </div>
-                <div class="recipe_title">
-                    이름
-                </div>
-            </li>
-            <li class="recipe">
-                <div class="recipe_img">
-                    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="">
-                </div>
-                <div class="recipe_title">
-                    이름
-                </div>
-            </li>
-            <li class="recipe">
-                <div class="recipe_img">
-                    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="">
-                </div>
-                <div class="recipe_title">
-                    이름
-                </div>
-            </li>
-            <li class="recipe">
-                <div class="recipe_img">
-                    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="">
-                </div>
-                <div class="recipe_title">
-                    이름
-                </div>
-            </li>
-            <li class="recipe">
-                <div class="recipe_img">
-                    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="">
-                </div>
-                <div class="recipe_title">
-                    이름
-                </div>
-            </li>
-        </ul> {% endcomment %}
-    </div>
-        </ul>
-    </div>
+        {% endfor %}
+    </div>  
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="{% static 'main.js' %}"></script>
     <script>
-        /* 위치기반 현재 날씨 정보 */
-        if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition((pos) => {
-                let lat = pos.coords.latitude;
-                let lon = pos.coords.longitude;
-                console.log(lat, lon);
-                $.getJSON(
-                    'https://api.openweathermap.org/data/2.5/weather?lat=' + lat + '&lon=' + lon + '&appid=7d5fba451f0f0e3d56dc8bfbd6263516&units=metric&lang=ko',
-                    function(result) {
-                    $('.temp').append(result.main.temp + '℃');
-                    var weathericon = '<img src="http://openweathermap.org/img/wn/' + result.weather[0].icon + '.png" alt="' + result.weather[0].description + '">';
-                    $('.icon').html(weathericon);
-                });
-            }), (err) => {
-                console.log('GPS를 사용할 수 없습니다.');
-            };
-        };
+       
         /* 레시피 검색 */
         function search_recipe() {
             var food_cate = document.getElementById('searchfield').value;
