--- a/mainpage/templates/mainpage/header.html
+++ b/mainpage/templates/mainpage/header.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="navbar_logo">
             <a href="{% url 'mainpage:mainpage' %}">
-                <img src="{% static 'logo.png' %}">
+                <img src="{% static 'lglg.png' %}">
             </a>
         </div>
         <ul class="navbar_menu">
