--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -35,25 +35,25 @@
                     {% comment %} <input id='searchfield' type='text' max_length=255 autocomplete='off'>
                     <button class='searchbtn' onclick="search_recipe(); return false;">검색</button> {% endcomment %}
                 </div>
-            <div class = "wea">    
-                <a href="{% url 'mainpage:mainpage' %}#slideShow" class="weather">
-                    <div class="temp"></div>
-                    <div class="icon"></div>
-            </div>        
-                    <div class="my_info">
-                        {% if user.is_authenticated %}
-                            <div class="main_common">
-                                {% comment %} <p>{{request.user.username}}님 환영 합니다. </p> {% endcomment %}
-                                <p>{{request.user.username}}<a href="{% url 'users:logout' %}"><button class = logout_1> <img class=out src="{% static 'logout.png' %}"> </button> </a></p>
-                            </div>
-                        {% else %}
-                            <div class="main_common">
-                                <p> 로그인 해야 이용 가능합니다 </p>
-                                <a href="{% url 'users:login' %}"><button class = login_1> <img class=in src="{% static 'login.png' %}"> </button> </a>
-                            </div>
-                        {% endif %}   
-                    </div>
-                </a>
+                <div class = "wea">    
+                    <a href="{% url 'mainpage:mainpage' %}#slideShow" class="weather">
+                        <div class="temp"></div>
+                        <div class="icon"></div>
+                    </a>
+                </div>        
+                <div class="my_info">
+                    {% if user.is_authenticated %}
+                        <div class="main_common">
+                            {% comment %} <p>{{request.user.username}}님 환영 합니다. </p> {% endcomment %}
+                            <p>{{request.user.username}}<a href="{% url 'users:logout' %}"><button class = logout_1> <img class=out src="{% static 'logout.png' %}"> </button> </a></p>
+                        </div>
+                    {% else %}
+                        <div class="main_common">
+                            <p> 로그인 해야 이용 가능합니다 </p>
+                            <a href="{% url 'users:login' %}"><button class = login_1> <img class=in src="{% static 'login.png' %}"> </button> </a>
+                        </div>
+                    {% endif %}   
+                </div>
                 {% comment %} <div class="my_info">
                     {% if user.is_authenticated %}
                         <p>{{request.user.first_name}}님은 현재 {{request.user.allergyinfo}} 대한 알러지가 있습니다 </p>
@@ -158,7 +158,7 @@
                     let lon = pos.coords.longitude;
                     console.log(lat, lon);
                     $.getJSON(
-                        'https://api.openweathermap.org/data/2.5/weather?lat=' + lat + '&lon=' + lon + '&appid=7d5fba451f0f0e3d56dc8bfbd6263516&units=metric&lang=ko',
+                        'https://api.openweathermap.org/data/2.5/weather?lat=' + lat + '&lon=' + lon +'&appid=7d5fba451f0f0e3d56dc8bfbd6263516&units=metric&lang=ko',
                         function(result) {
                         $('.temp').append(result.main.temp + '℃');
                         var weathericon = '<img src="http://openweathermap.org/img/wn/' + result.weather[0].icon + '.png" alt="' + result.weather[0].description + '">';
@@ -234,8 +234,10 @@
                                 var number = Math.floor(Math.random() * (recipes.length-1));
                                 if (random_list.includes(number)) {
                                     continue;
-                                }
-                            }
+                                };
+                                random_list.push(number);
+                                num_cnt++;
+                            };
                             random_list.forEach(function(ind) {
                                 const recipe_slide = ul.item(0).getElementsByTagName('li')[li_cnt];
                                 const recipe_img = document.createElement('img');
@@ -249,8 +251,8 @@
                                 li_cnt++;
                                 recipe_slide.appendChild(caption);
                                 recipe_slide.appendChild(recipe_img);
-                            })
-                        }
+                            });
+                        };
                     });
                 }), (err) => {
                     console.log('GPS를 사용할 수 없습니다.');
