--- a/mainpage/templates/mainpage/recipe_search.html
+++ b/mainpage/templates/mainpage/recipe_search.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href='{% static "common.css" %}?after'>
+    <link rel="stylesheet" type="text/css" href='{% static "common.css" %}'>
     <link rel="apple-touch-icon" href="/custom_icon.png"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,22 +47,22 @@
         <h3>레시피 검색 결과</h3>
     </div>
     <div class="recomm_list">
-        <ul class="recipe_list">
+        <div class="recipe_list">
             {% if board_list %}
                 {% for board in board_list %}
-                    <li class="recipe">
+                    <div class="recipe">
                         <div class="recipe_img">
-                            <img src="{% get_static_prefix %}{{board.num}}.jpg" alt="" onclick="recipe_detail();">
+                            <a href="{% url 'mainpage:recipe_detail' board.recipe_id %}"><img src="{% get_static_prefix %}{{board.num}}.jpg" alt=""></a>
                         </div>
                         <div class="recipe_title">
-                            {{board.title}}
+                            <a href="{% url 'mainpage:recipe_detail' board.recipe_id %}">{{board.title}}</a>
                         </div>
-                    </li>
+                    </div>
                 {% endfor %}
             {% else %}
                 <div>검색 결과가 없습니다.</div>
             {% endif %}
-        </ul>    
+        </div>    
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
