--- a/mainpage/static/aa.css
+++ b/mainpage/static/aa.css
@@ -85,23 +85,14 @@ body {
     margin-top: 20px;
 }
 
-.area3 p{
-    font-size: 22px; color: rgb(255, 255, 255); 
-    text-align: center;
-    margin-top: 18px;
-    font-weight : bold;
-    border-radius: 20px;
-    
-    background-color: #FFB30E;
-}
 
 /* 사람 아이콘 */
 .per{
     height: 32px;
     width: 32px;
     position: absolute;
-    left: 202px;
-    top:19px;
+    left: 199px;
+    top:17px;
 
 
 }
@@ -125,9 +116,20 @@ body {
     position: absolute;
     left: 115px;
     top:157px;
-
-
 }
+
+/*추가 아이콘 */
+.add{
+    filter:drop-shadow(5px 5px 5px #686867);
+    height: 44px;
+    width: 44px;
+    position: absolute;
+    left: 115px;
+    top:240px;
+}
+
+
+
 .int-area {
 
     position: relative;
