--- a/mainpage/static/header.css
+++ b/mainpage/static/header.css
@@ -121,7 +121,8 @@ a {
     background-color: #666;
 }
 #button {
-    margin-top: 20px;
+    position: relative;
+    margin-top: 97px;
     text-align: center;
 }
 #btn1 {
@@ -274,7 +275,8 @@ a {
 ul#ingredient_list li {
     padding: 5px 0px 5px 5px;
     margin-bottom: 5px;
-    border-bottom: 1px solid #efefef;
+    position: relative;
+    top:48px;
     font-size: 20px;
     font-weight: bold;
 }
@@ -341,6 +343,8 @@ ul#ingredient_list li {
         align-self: center;
         text-align: center;
         margin: auto;
+        position: relative;
+        top:141px;
         
     }
     #ingredient_result {
