--- a/mainpage/templates/mainpage/ingredients_result.html
+++ b/mainpage/templates/mainpage/ingredients_result.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href='{% static "aa.css" %}? after'>
+    <link rel="stylesheet" type="text/css" href='{% static "aa.css" %}'>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" href="/custom_icon.png"/>
@@ -61,11 +61,11 @@
         </div>
     <div class = 'recipe2-form'>
         <div class="area2">
-            <p><img class = ing src="{% static 'ing1.png' %}"> <br><br><br><br> {{ user_data }}</p>        
+            <p><img class = ing src="{% static 'u.png' %}"> <br><br><br><br> {{ user_data }}</p>        
         </div>
 
         <div class="area3" id='ingredient_result' >
-            <p> 사용자 추가 식재료 </p>
+            <p> <img class = add src="{% static 'ing1.png' %}"> </p>
             <ul id='ingredient_list'>
             </ul>
         </div>
