--- a/mainpage/static/common.css
+++ b/mainpage/static/common.css
@@ -15,15 +15,23 @@ body {
 .card {
     border-radius: 20px;
     width: 80%;
-    height: auto;
+    height: 20%;
     margin:0 auto;
     background-color: #EEB541;
 }
-.image {
-    width: 100%;
-    height: 350px;
-    object-fit: cover;
 
+.image_div {
+    width: 100%;
+    height: 200px;
+}
+
+.image_card{
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    width:100%;
+    height:100%;
+    object-fit:fill;
+    
 }
 
 /* 로그인 로그아웃 아이콘 */
