--- a/communityboard/templates/communityboard/communityboard_index.html
+++ b/communityboard/templates/communityboard/communityboard_index.html
@@ -11,7 +11,7 @@
 
     <!-- custom CSS -->
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style-cindex.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style-cindex.css' %}? after">
 
     <!-- Font -->
     <link rel="stylesheet" type="text/css"
