커뮤니티 CSS 수정

--- a/communityboard/static/css/style-ccreate.css
+++ b/communityboard/static/css/style-ccreate.css
@@ -6,3 +6,10 @@ a {
     text-decoration: none;
     color:#F7713A;
 }
+
+
+.c1-1 {
+    text-decoration: none;
+    color: black;
+    text-shadow: 1px 0.2px white;
+}
