메인이미지수정

--- a/mainpage/static/common.css
+++ b/mainpage/static/common.css
@@ -437,7 +437,10 @@ ul#ingredient_list li {
 .fridge-img {
     text-align: center;
 }
-
+.asdfg{
+    width: 340px;
+    height: 300px;
+}
 .to-do-text {
     text-align: center;
 }
