--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -80,7 +80,7 @@
         <div id="container">
             <div class="fridge-img">
                 <a>
-                    <img src="{% static 'fridge.png' %}">
+                    <img class="asdfg" src="{% static 'asdfg.png' %}">
                 </a>
             </div>
             <div class="to-do-text">
