--- a/mainpage/static/common.css
+++ b/mainpage/static/common.css
@@ -119,14 +119,6 @@ img {
     z-index: 1030;
 }
 
-.fixed-top {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    z-index: 1030;
-}
-
 
 .navbar {
     display:flex;
@@ -428,6 +420,7 @@ ul#ingredient_list li {
 
 .fridge-img {
     text-align: center;
+    margin-top: 10px;
 }
 
 .to-do-text {
@@ -547,6 +540,11 @@ ul.slider li {
 
     .ingred-item {
         width:50%;
+    }
+
+    .wea {
+        left: 0px;
+        margin:auto;
     }
 }
 
