--- a/mypage/templates/mypage/mypage.html
+++ b/mypage/templates/mypage/mypage.html
@@ -89,7 +89,7 @@
                         <a href="{% url 'mypage:show_likeList' %}" class="list-icon">
                             <i class="bi bi-box2-heart-fill"></i>
                         </a>
-                        <a href="" class="list-icon">
+                        <a href="{% url 'mypage:show_bookmark' %}" class="list-icon">
                             <i class="bi bi-bookmark-check-fill"></i>
                         </a>
                         <a href="{% url 'mypage:write' %}" class="list-icon">
