--- a/mainpage/templates/mainpage/recipe_search.html
+++ b/mainpage/templates/mainpage/recipe_search.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href='{% static "common.css" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static "common.css" %}?after'>
     <link rel="apple-touch-icon" href="/custom_icon.png"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/312926fc77.js" crossorigin="anonymous"></script>
-    <title>Recipe Search Page</title>
+    {% comment %} <title>Recipe Search Page</title> {% endcomment %}
 </head>
 <body>
     <div style="height:100px;">
@@ -43,26 +43,27 @@
         </nav>
     </div>
 
-    <div class="content-title">
-        <h3>레시피 검색 결과</h3>
+    <div class="content-title" style="text-align:center">
+        <h3>"{{kw}}"로 검색한 결과!&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-rotate fa-1x" onclick="refreshPage()"></i></h3>
     </div>
-    <div class="recomm_list">
-        <div class="recipe_list">
-            {% if board_list %}
-                {% for board in board_list %}
-                    <div class="recipe">
-                        <div class="recipe_img">
-                            <a href="{% url 'mainpage:recipe_detail' board.recipe_id %}"><img src="{% get_static_prefix %}{{board.num}}.jpg" alt=""></a>
-                        </div>
-                        <div class="recipe_title">
-                            <a href="{% url 'mainpage:recipe_detail' board.recipe_id %}">{{board.title}}</a>
-                        </div>
-                    </div>
-                {% endfor %}
-            {% else %}
-                <div>검색 결과가 없습니다.</div>
-            {% endif %}
-        </div>    
+    <div class="list">
+        {% if board_list %}
+            {% for board in board_list %}
+            <div class ="card">
+                <div class="image_div">
+                    <a href="{% url 'mainpage:recipe_detail' board.recipe_id %}"><img class="image_card" src="{% get_static_prefix %}{{board.num}}.jpg" alt=""></a>
+                </div>
+                <div class = "sblank"></div>
+                <div class="recipe-title">
+                    <a href="{% url 'mainpage:recipe_detail' board.recipe_id %}">{{board.title}}</a>
+                </div>
+                <div class = "sblank"></div>
+            </div>
+            <div class="blank"></div>
+            {% endfor %}
+        {% else %}
+            <div>검색 결과가 없습니다.</div>
+        {% endif %}
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -95,5 +96,10 @@
         function recipe_detail() {
             location.href = "https://www.10000recipe.com/recipe/6939543";
         }
+
+        function refreshPage(){
+            window.location.reload();
+        } 
+            
     </script>
 </body>
