--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -81,7 +81,7 @@ style
         <head>
             <meta charset="UTF-8">
             <title>Login</title>
-            <link rel = "stylesheet" href = "style.css">
+            {% comment %} <link rel = "stylesheet" href = "style.css"> {% endcomment %}
             <script src = "jquery-3.4.1.js"></script>
         </head>
     </head>
