--- a/users/static/style.css
+++ b/users/static/style.css
@@ -8,7 +8,7 @@ body {
     justify-content: center;
     align-items: center;
     /*background-color: #F9E1A3;*/ /*bbbbdd */
-    background: url("bgg.jpg") no-repeat center;
+    background: url("bg11.png") no-repeat center; 
     background-size: cover;
 }
 
