--- a/users/static/style1.css
+++ b/users/static/style1.css
@@ -9,8 +9,8 @@ body {
     justify-content: center;
     align-items: center;
     /*background-color: #F9E1A3;*/ /*bbbbdd */
-    background: url("bgg.jpg") no-repeat center;
-    background-size: cover;
+    background: url("bg11.png") no-repeat center;
+    background-size: cover; 
 }
 
 body::before{
