--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -12,7 +12,7 @@
          <script src="https://code.jquery.com/jquery-latest.min.js"></script>
          {% load static %}
          <script src="{% static 'a.js' %}"></script>
-         <link rel="stylesheet" href="{% static 'style1.css' %}">
+         <link rel="stylesheet" href="{% static 'style1.css' %}? after">
          <html lang = "ko">
          <title>Signup</title>
     </head>   
