--- a/mainpage/static/header.css
+++ b/mainpage/static/header.css
@@ -286,6 +286,7 @@ ul#ingredient_list li {
         flex-direction: column;
         align-items: flex-start;
         padding: 8px 24px;
+        outline: 5px solid #F79604;
     }
     .navbar-expand-lg {
         flex-wrap: nowrap;
