--- a/mainpage/templates/mainpage/ingredients_change.html
+++ b/mainpage/templates/mainpage/ingredients_change.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href='{% static "common.css" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static "common.css" %}? after'>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" href="/custom_icon.png"/>
