--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -14,7 +14,7 @@
     <title>Main Page</title>
 </head>
 <body>
-    <div style="height: 100px; background-color: #FFB30E;">
+    <div style="height: 100px; ">
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="navbar_logo">
                 <a href="{% url 'mainpage:mainpage' %}">
