--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -82,7 +82,7 @@ style
             <meta charset="UTF-8">
             <title>Login</title>
             {% comment %} <link rel = "stylesheet" href = "style.css"> {% endcomment %}
-            <script src = "jquery-3.4.1.js"></script>
+            {% comment %} <script src = "jquery-3.4.1.js"></script> {% endcomment %}
         </head>
     </head>
 <body>
