webm 가져오기 성공: 다운 안됨

--- a/stream/templates/stream/index.html
+++ b/stream/templates/stream/index.html
@@ -34,7 +34,7 @@
     <div>
         <button id="start">Start camera</button>
         <button id="record" disabled>Start Recording</button>
-        <button id="play" onclick="ajax_request()" disabled>Play</button>
+        <button id="play" disabled>Play</button>
         <button id="download" disabled>Download</button>
     </div>
 
