--- a/stream/templates/stream/index.html
+++ b/stream/templates/stream/index.html
@@ -37,7 +37,7 @@
         <button id="play" disabled>Play</button>
         <button id="download" disabled>Download</button>
     </div>
-    <form action='/stream/media" method="post">
+    <form action="/stream/media" method="post">
     <div>
         Recording format: <select id="codecPreferences" disabled></select>
     </div>
